# Almanach01

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  deploy.yml  release.yml
anthropic-proxy/: Cargo.toml
anthropic-proxy/src/: main.rs
data/: automode.json
docs/: term_sheet_friends_family.md
orchestrator/: .env.example  Cargo.toml  Dockerfile.openclaw-agent
orchestrator/migrations/: seed_courses.sh  seed_ics2o.sql  seed_mth1w.sql
orchestrator/src/: anthropic_proxy.rs  api.rs  auth.rs  automode.rs  chat_db.rs  config.rs  course_api.rs  courses.rs  main.rs  terminal_agent.rs
orchestrator/static-site/: index.html
orchestrator/static-site/app/: index.html
scripts/: almanach.service  append_methods.py  deploy-user.sh  deploy.sh  install-release.sh  manual-deploy.sh  migrate_courses.py  setup-vps-user.sh  setup-vps.sh
static-site/: index.html
static-site/app/: index.html
static-site/apps/almanach01/: courses.html  index.html
tauri-app/: Cargo.toml  tauri.conf.json
tauri-app/capabilities/: default.json
tauri-app/src/: main.rs
ui/: Cargo.toml  index.html
ui/src/: api.rs  main.rs  types.rs
ui/src/components/: chat.rs  dashboard.rs  login.rs  mod.rs  settings.rs  teams.rs  terminal.rs
